--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+# Account name - AdamPublicover
 language: node_js
 
 node_js:
@@ -7,3 +8,11 @@ cache: npm
 
 before_install:
   - ls -la
+  - mkdir dist
+  - cd dist
+  - ls -la
+
+install:
+ - ls -la 
+ - npm install
+ - ls -la
