--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
-language: node_js
+env:
+  - $NOW_TOKEN=7dlabe6c1
 
+language: node_js
 node_js:
   - "10.9.0"
 
 cache: npm
 
 before_install:
-  - ls -la
+  - "npm config set spin false"
+  - "npm i -g now"
+
+install:
+  - npm install
+
+script:
+  - npm run build
+  - npm run test
+
+deploy:
+  provider: script
+  script: bash scripts/deploy.sh
+  skip_cleanup: true
